--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,14 +5,29 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link rel="stylesheet" href="/static/css/blog.css">
+
+		
+
     </head>
-	<body>
+	<body class="bg-white">
 		<div class="page-header">
 			{% if user.is_authenticated %}
 				<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 			{% endif %}
 			<h1><a href="/">Django Girls Blog</a></h1>
+			<nav class="nav justify-content-center float-right">
+				<div class="nav-link">
+
+					<div class="custom-control custom-switch">
+						<input type="checkbox" class="custom-control-input" id="darkSwitch">
+						<label class="custom-control-label" for="darkSwitch">Dark Mode</label>
+					</div>
+
+					<script src="{% static 'js/dark-mode-switch.js' %}" type="text/Javascript""></script>
+
+				</div>
+			</nav>
 		</div>
 		<div class="content container">
 			<div class="row">
