--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -31,7 +31,7 @@ h1, h2, h3, h4 {
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
-    color: #428bca;
+    color: #ffffff;
     float: right;
     font-size: 26pt;
     margin-right: 20px;
@@ -42,7 +42,7 @@ h1, h2, h3, h4 {
 }
 
 .post h2 a, .post h2 a:visited {
-    color: #000000;
+    color: #428bca;
 }
 
 [data-theme="dark"] {
